# cctp-bridge

./: CONTRIBUTING.md  Cargo.toml  README.md  release.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check.yml  pr-review.yml  test.yml
examples/: evm_sol.rs  reclaim.rs  recv_message.rs  sol_evm.rs
examples/common/: mod.rs
src/: address.rs  attestation.rs  bridge.rs  chain.rs  domain_id.rs  erc.rs  error.rs  lib.rs  message_transmitter.rs  solana.rs  token_messenger.rs
src/bridge/: evm.rs  fee.rs  reclaim.rs  recv.rs  solana.rs
tests/: integration.rs
