[package]
name = "cctp-bridge"
version = "0.1.0"
edition = "2024"
description = "Multi chain bridge for USDC"
repository = "https://github.com/CarteraMesh/cctp-bridge"
authors = ["gh@cartera-mesh.com"]
documentation = "https://docs.rs/cctp-bridge"
homepage = "https://github.com/CarteraMesh/cctp-bridge"
categories = ["finance", "api-bindings"]
keywords = ["defi", "solana", "ethereum", "web3", "blockchain", "sdk"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
alloy-chains = "0.2"
alloy-contract = { version = "1", default-features = false }
alloy-json-rpc = { version = "1", default-features = false }
alloy-network = { version = "1", default-features = false }
alloy-primitives = { version = "1", default-features = false, features = [
    "std",
    "rlp",
] }
alloy-provider = { version = "1", default-features = false, features = [
    "anvil-node",
    "reqwest",
] }
alloy-rpc-types = "1"
alloy-sol-types = { version = "1", features = ["json"] }
alloy-transport = { version = "1", default-features = false }
bincode = "1"
nitrogen-circle-message-transmitter-v2-encoder = { git = "https://github.com/CarteraMesh/nitrogen.git", branch = "main" }
nitrogen-circle-token-messenger-minter-v2-encoder = { git = "https://github.com/CarteraMesh/nitrogen.git", branch = "main" }
nitrogen-instruction-builder = { git = "https://github.com/CarteraMesh/nitrogen.git", branch = "main" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-keypair = "2"
solana-pubkey = { version = "2", features = ["serde"] }
solana-rpc-client = { version = "2" }
solana-signature = "2"
solana-signer = "2"
spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
alloy-signer-local = "1"
anyhow = "1"
dotenv = "0.15"
rstest = "0.26"
solana-commitment-config = "2"
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"

#[lints.rust]
#unused_imports = "allow"
#unused_variables = "allow"
#dead_code = "allow"

[lints.clippy]
match_like_matches_macro = "allow"
